			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: pl -dump-runtime-variables value for PLLIB in single-threaded
    version.  Roberto Bagnara.

  * FIXED: Bug#64: Error handling for failing Prolog arithmetic functions.
    Roland Illig.

  * FIXED: unifyable/3 corrupts the stacks when called with variables
    living on the local stack.  This notably affects dif/2.  Hugo Ferreira.  


VERSION 5.5.20 (June 30, 2005)
==============================

  * FIXED: Write for floats always uses the C locale decimal point (.).
    Hugo Ferreira.

  * FIXED: Unicode handling in filenames associated with streams (error
    reporting and prolog_load_context/2).

  * FIXED: Unicode support for environment variables (non-Windows version).

  * FIXED: Unicode handling of commandline arguments.

  * FIXED: Bug#56: UNICODE handling for shell/1 and win_exec/2.  Dmitry.

  * FIXED: absolute_file_name/2 and friends for UNICODE filenames on
    windows platforms.

  * FIXED: Bug#59: seek/4 on output streams.  Holger Kanwischer.


VERSION 5.5.19 (May 24, 2005)
=============================

  * ADDED: PL_query(PL_QUERY_USER_CPU) to get portable CPU statistics.


VERSION 5.5.18 (May 20, 2005)
=============================

  * FIXED: Bug#44 ?=(X,Y) in when/2.  Roy Haddad and Tom Schrijvers.


VERSION 5.5.17 (May 09, 2005)
=============================

  * PORT: Bug#43: remove / after $(DESTDIR) to avoid paths starting
    with //.  Causes problems on Cygwin.  Dmitry.

  * MODIFIED: Allow for goal_expansion/2 on named meta-predicates.

  * FIXED: nb_setarg/3 using float arguments.

  * FIXED: setarg/nb_setarg allows to overwrite the functor using Index
    = 0.

  * ENHANCED: do 1st argument indexing on floats.
